# gsoc-2022-thrift

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  west.yml  zephyr-env.sh
.github/: license_config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-posix.yml  build.yml  coding-style.yml
cmake/: thrift.cmake
lib/: CMakeLists.txt  Kconfig  prj.conf
lib/thrift/: CMakeLists.txt  Kconfig  thrift.cpp
lib/thrift/include/muzic/: defl_static.h  inflater.h  mz_config.h
lib/thrift/include/sys/: poll.h
lib/thrift/include/thrift/: config.h
lib/thrift/include/thrift/server/: TFDServer.h
lib/thrift/include/zephyr/posix/sys/: ioctl.h  ioctl_calls.h
lib/thrift/muzic/: genlz77.c  inflater.c
lib/thrift/muzic/Inflater/: .gitignore  LICENSE.md  README.md  inflater.c
lib/thrift/muzic/Inflater/extra/examples/uzo-cpp/: main.cpp
lib/thrift/muzic/Inflater/extra/examples/uzo-feed/: main.c
lib/thrift/muzic/Inflater/extra/examples/uzo-proc/: main.c
lib/thrift/muzic/Inflater/extra/examples/uzo-take/: main.c
lib/thrift/muzic/Inflater/extra/work/Inflater.xcodeproj/: project.pbxproj
lib/thrift/muzic/Inflater/extra/work/Inflater.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lib/thrift/muzic/Inflater/extra/work/Inflater.xcodeproj/xcshareddata/xcschemes/: uzo-cpp.xcscheme  uzo-feed.xcscheme  uzo-proc.xcscheme  uzo-take.xcscheme
lib/thrift/muzic/include/: defl_static.h  inflater.h  mz_config.h  uzlib.h  zlib.h
lib/thrift/muzic/src/: defl_static.c  genlz77.c  inflater.c  zlib_comp.c
lib/thrift/src/: _stat.c  defl_static.c  zlib_comp.c
lib/thrift/src/thrift/: config.h
lib/thrift/src/thrift/concurrency/: Mutex.cpp
lib/thrift/src/thrift/protocol/: TBinaryProtocol.h
lib/thrift/src/thrift/server/: TConnectedClient.h  TFDServer.cpp  TFDServer.h  TServer.h  TServerFramework.cpp  TServerFramework.h  TSimpleServer.cpp  TSimpleServer.h
lib/thrift/src/thrift/transport/: TSSLServerSocket.cpp  TSSLServerSocket.h  TSSLSocket.cpp  TSSLSocket.h  TServerSocket.h  ThriftTLScertificateType.h
samples/lib/thrift/: README.rst
samples/lib/thrift/certs/: qemu-key.pem
samples/lib/thrift/hello_client/: CMakeLists.txt  Makefile  prj.conf  sample.yaml
samples/lib/thrift/hello_client/src/: main.cpp
samples/lib/thrift/hello_common/: native-cert.pem  native-key.pem  qemu-cert.pem
samples/lib/thrift/hello_server/: CMakeLists.txt  Kconfig  Makefile  prj.conf  sample.yaml
samples/lib/thrift/hello_server/boards/: qemu_x86_64.conf
samples/lib/thrift/hello_server/src/: HelloHandler.h  main.cpp
scripts/: 99-thrift.yaml  coding-style.sh  pre-commit.sh
tests/lib/thrift/ThriftTest/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/lib/thrift/ThriftTest/src/: client.cpp  context.hpp  main.cpp  server.hpp
tests/lib/thrift/hello/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/thrift/hello/boards/: qemu_x86_64.conf
tests/lib/thrift/hello/src/: HelloHandler.h  main.cpp
tests/lib/thrift/muzic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/thrift/muzic/src/: integration.c
thrift/: hello.thrift
tools/: create_serial_socket.py
zephyr/: module.yml
